--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
   flutter_localizations: 
     sdk: flutter       
 
-  provider: ^6.0.0
-  extended_image: ^6.0.1
+  provider:
+  extended_image:
   flutter_staggered_grid_view: ^0.6.0
   meta: ^1.3.0
   http: ^0.13.3
-  url_launcher: ^6.0.18
+  url_launcher: ^6.0.10
   
 
 dev_dependencies:
