--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter       
 
   provider:
-  extended_image:
+  extended_image: 4.2.1
   flutter_staggered_grid_view: ^0.6.0
   meta: ^1.3.0
   http: ^0.13.3
